<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_call_button"
        android:icon="@drawable/ic_phone"
        android:title="@string/call_reporter"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/toolbar_edit"
        android:title="@string/edit"
        app:showAsAction="collapseActionView"
        android:visible="false"
        />

    <item
        android:id="@+id/toolbar_report_dead"
        android:title="@string/change_state_dead"
        app:showAsAction="collapseActionView"
        android:visible="false"
        />

    <item
        android:id="@+id/toolbar_report_alive"
        android:title="@string/change_state_alive"
        app:showAsAction="collapseActionView"
        android:visible="false"
        />

    <item
        android:id="@+id/toolbar_delete"
        android:title="@string/delete"
        app:showAsAction="collapseActionView"
        android:visible="false"
        />

    <item
        android:id="@+id/toolbar_report_button"
        android:icon="@drawable/ic_report_white_24dp"
        android:title="@string/report_pigeon"
        app:showAsAction="always" />


</menu>