<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    >

    <TextView
        android:id="@+id/text_enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/could_not_read_phone"
        style="@style/TextAppearance.MaterialComponents.Error"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:hint="@string/enter_phone"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/text_enter_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/colorPrimaryDark"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/okay"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_phone"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_phone"
        app:layout_constraintEnd_toStartOf="@id/btn_okay"
        />

</androidx.constraintlayout.widget.ConstraintLayout>